<resources>
    <string name="app_name">我的聊天室</string>
    <string name="btn_send">发送</string>
    <string name="btn_login">登录</string>
    <string name="btn_convert">退出当前账户</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_register">注册</string>
    <string name="btn_reverse">切换</string>
    <string name="view_ip">IP地址 </string>
    <string name="view_port">端口号 </string>
    <string name="view_name">用户名 </string>
    <string name="view_user">未登录</string>
    <string name="conn_fail">连接失败！服务器未开启</string>
    <string name="view_info">欢迎来到聊天室</string>
    <string name="exit_tip">你确定要退出吗 ？</string>
    <string name="yes_btn">确定</string>
    <string name="no_btn">取消</string>
    <string name="btn_selimage">选择头像</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_normal_voice">按住 说话</string>
    <string name="btn_press_voice">松开 结束</string>
    <string name="sd_noexit">SD卡不存在</string>
    <string name="btn_photo">从相册选择</string>
    <string name="tip_input">输入框内容不能为空！</string>
    <string name="login_progress">加载中！请稍后.....</string>
    <string name="record_short">录音时间太短！</string>
    <string name="image_input">请选择要上传的头像！</string>

</resources>
