<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/titlebg"
  	android:gravity="center_vertical" 
    >
<ImageView
    android:layout_width="30dp" 
    android:layout_height="30dp"
    android:gravity="center"
    android:layout_toLeftOf="@id/loginer"
    android:layout_marginRight="3dp"
    android:id="@+id/image"
	/>
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="fill_parent" 
    android:text="@string/view_user"
    android:textStyle="bold"
    android:textSize="15sp"
    android:textColor="@drawable/yellow"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:id="@+id/loginer"
    />
  <ImageButton
  	android:layout_width="wrap_content" 
  	android:background="@drawable/titlebg"
    android:layout_height="wrap_content" 
    android:text="@string/btn_login"
    android:layout_toLeftOf="@+id/user_register"
    android:layout_marginRight="2dp"
    android:gravity="center"
    android:onClick="userLogin"
    android:id="@+id/user_login"
    android:textColor="#FFFFFF"
  />
<ImageButton
  	android:layout_width="wrap_content" 
  	android:background="@drawable/titlebg"
    android:layout_height="wrap_content" 
    android:text="@string/btn_register"
    android:layout_alignParentRight="true"
    android:gravity="center"
    android:id="@+id/user_register"
    android:onClick="userRegister"
    android:textColor="#FFFFFF"
  />
</RelativeLayout>
