<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/main">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/titlebg"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:gravity="center"
            android:layout_toLeftOf="@id/loginer"
            android:layout_marginRight="3dp"
            android:id="@+id/image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/view_user"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@drawable/yellow"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/loginer"/>
        <Button
            android:layout_width="67dp"
            android:background="@drawable/title_btn_right"
            android:layout_height="wrap_content"
            android:text="操作"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/btn_operate"
            android:onClick="outOperatePopuWindow"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            />

    </RelativeLayout>
    <ListView
        android:id="@+id/lv_message"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:background="@drawable/loginbg"
        android:scrollbarStyle="outsideOverlay"
        android:divider="@null"
        android:dividerHeight="3dp"
        android:transcriptMode="alwaysScroll"
        android:cacheColorHint="#00000000"
        android:listSelector="#00000000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebg"
        android:id="@+id/bottom_input"
        android:layout_marginTop="0dp"
        >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/btn_intercon"
        android:onClick="openRecordWindow"
        android:background="#00000000"
        android:layout_marginLeft="3dp"
        android:id="@+id/btn_open_record"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/before_recored_layout">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/chat_expression_bg"
                android:onClick="showExpressionWindow"
                android:background="#00000000"
                android:id="@+id/btn_express"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:singleLine="false"
                android:id="@+id/content"/>
            <Button
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:text="@string/btn_send"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_press_voice"
                android:id="@+id/sendMsg"
                android:textSize="14sp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="6dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start_recored_layout"
            android:layout_marginLeft="5dp"
            android:visibility="gone">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/btn_normal_voice"
                android:onClick="startRecord"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_press_voice"
                android:id="@+id/btn_start_record"
                android:textSize="17sp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="6dp"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="180dip"
        android:background="@drawable/express_item"
        android:layout_below="@id/bottom_input"
        android:id="@+id/viewpager_layout"
        android:visibility="gone"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/tabpager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/express_spot_layout"
            />
    </FrameLayout>
</LinearLayout>
